tests/baselines/reference/anyIndexedAccessArrayNoException.errors.txt
anyIndexedAccessArrayNoException.ts(1,12): error TS2538: Type '[]' cannot be used as an index type.


==== anyIndexedAccessArrayNoException.ts (1 errors) ====
    var x: any[[]];
               ~~
!!! error TS2538: Type '[]' cannot be used as an index type.
    